# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/hiviewdfx/hiview/hiview.gni")
import("//build/ohos.gni")

ohos_executable("analysis_faultlog") {
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    cfi_vcall_icall_only = true
    debug = false
  }

  install_enable = false

  sources = [ "analysis_faultlog.cpp" ]

  configs = [ "$hiview_root/utility/smart_parser:smart_parser_config" ]

  deps = [
    "$hiview_root/utility/common_utils:hiview_reliability_common_utils",
    "$hiview_root/utility/smart_parser:smart_parser",
  ]

  external_deps = [ "hilog:libhilog" ]

  part_name = "hiview"
  subsystem_name = "hiviewdfx"
}
